--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -103,7 +103,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         
         <p><a href="/static/example.pdf">See an example</a>.</p>
-        <p><a href="/static/public-keys.txt">List of public keys we've used for signing</a>.</p>
+        <p><a href="/static/public-keys.txt">Public keys we've used for signing</a>.</p>
       </section>
 
       <!-- FOOTER -->
