--- a/app/templates/success.njk
+++ b/app/templates/success.njk
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>archive.social | Capture complete.</title>
-    <meta name="description" content="" />
-
+    <title>archive.social | High-fidelity capture of Twitter threads as sealed PDFs.</title>
+    <meta name="description" content="archive.social is an experiment of the Harvard Library Innovation Lab.">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
