Updated certs ref

--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -122,9 +122,9 @@
 
         <h2>How do I check that a PDF came from you?</h2>
 
-        <p>You can download <a href="https://crt.sh/?q=lil.law.harvard.edu">this public key file</a> and add it to Adobe Acrobat. We'll also add a page on our site shortly where you can upload a PDF and we'll confirm whether it really came from us.</p>
+        <p>You can download <a href="https://crt.sh/?id=8004113167">this public key file</a> and add it to Adobe Acrobat. We'll also add a page on our site shortly where you can upload a PDF and we'll confirm whether it really came from us.</p>
 
-        <p>Tech nerd note: As an extra check, the key you're downloading here happens to be one that we also verified via LetsEncrypt as belonging to our Harvard domain, lil.law.harvard.edu. You can see the same key in <a href="https://crt.sh/?q=lil.law.harvard.edu">the certificate transparency logs</a>.</p>
+        <p>Tech nerd note: As an extra check, the key you're downloading here happens to be one that we also verified via LetsEncrypt as belonging to our Harvard domain, lil.law.harvard.edu. You can see the same key in <a href="https://crt.sh/?id=8004113167">the certificate transparency logs</a>.</p>
 
         <h2>Does a signature on a PDF web archive mean it's real?</h2>
 
