--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -96,7 +96,7 @@
       <section>
         <h2>What is this?</h2>
 
-        <p><a href="https://archive.social">Archive.social</a> is an experiment by the <a href="https://lil.law.harvard.edu">Harvard Library Innovation Lab</a> to let you download signed PDFs of Twitter URLs. <a href="/static/example.pdf">Here's an example PDF</a> we made from <a href="https://twitter.com/dog_rates/status/1593441021060206594">https://twitter.com/dog_rates/status/1593441021060206594</a>.</p>
+        <p>Archive.social is an experiment by the <a href="https://lil.law.harvard.edu">Harvard Library Innovation Lab</a> to let you download signed PDFs of Twitter URLs. <a href="/static/example.pdf">Here's an example PDF</a> we made from <a href="https://twitter.com/doctorow/status/1591759999323492358">this tweet</a>.</p>
 
         <h2>Who can use it?</h2>
 
@@ -142,6 +142,8 @@
         </p>
         
         <p>archive.social is an experiment of the <a href="https://lil.law.harvard.edu">Harvard Library Innovation Lab</a>.</p>
+
+        <p><a href="https://twitter.com/harvardlil">@harvardlil</a> on Twitter - <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&amp;id=e097736c6f">Subscribe to our Newsletter</a>.</p>
       </footer>
 
     </main>
