--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -110,7 +110,7 @@
 
         <p>There are lots of screenshots of Twitter threads going around. Some are real, some are fake. You can't tell who made them, or when they were made.</p>
 
-        <p>PDFs let us apply document signatures and timestamps so anyone can check, in the future, that a PDF you download with "archive.social" really came from the Harvard Library Innovation Lab and hasn't been edited. PDFs also let us bundle in additional media as attachments. Coming soon pending a bug fix: Each signed PDF will include all images in the page (so you can see full size images that are cropped in the PDF view) and the primary video on the page if any.</p>
+        <p>PDFs let us apply document signatures and timestamps so anyone can check, in the future, that a PDF you download with "archive.social" really came from the Harvard Library Innovation Lab and hasn't been edited. PDFs also let us bundle in additional media as attachments. Each signed PDF currently includes all images in the page (so you can see full size images that are cropped in the PDF view) and the primary video on the page if any.</p>
 
         <h2>Why <em>not</em> make a PDF archiving tool for Twitter?</h2>
 
@@ -127,6 +127,8 @@
         <h2>Why didn't my requested URL capture correctly?</h2>
         
         <p>If a page fails to capture correctly after a few attempts, let us know. Also note that some PDF viewers will truncate very large PDFs, so you may need to try a different viewer if the top and bottom are hidden.</p>
+
+        <p>Deactivating the "unfold thread" option might also give better results in certain cases.</p>
 
         <h2>How do I check that a PDF came from you?</h2>
 
