Make "Unfold thread" disabled by default (?)
To discuss: Might be a good default in most cases + may prevent unnecessary resources consumption when folks try out `archive.social` for the first time.

--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -47,7 +47,7 @@
           
         <fieldset class="submit">
           <span>
-            <input type="checkbox" name="auto-scroll" id="auto-scroll" checked/>
+            <input type="checkbox" name="auto-scroll" id="auto-scroll"/>
             <label for="auto-scroll">Unfold thread</label>
           </span>
 
