--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -96,6 +96,26 @@
         <button>I understand, proceed.</button>
       </dialog>
 
+      <dialog id="check-pdf">
+
+        <h2>Check a PDF</h2>
+
+        <p>This tool verifies that a given .pdf file was created by archive.social by matching its fingerprint against our logs.</p>
+
+        <input 
+          aria-label="File input for the PDF file to check" 
+          type="file" 
+          accept=".pdf" 
+          name="check-pdf-file"/>
+
+        <textarea disabled>Results will be displayed here.</textarea>
+
+        <button>Check PDF</button>
+
+        <a href="/">Close</a>
+
+      </dialog>
+
       <!-- EXPLAINER -->
       <section>
         <h2>What is this?</h2>
@@ -132,7 +152,7 @@
 
         <h2>How do I check that a PDF came from you?</h2>
 
-        <p>You can download <a href="https://crt.sh/?id=8004113167">this public key file</a> and add it to Adobe Acrobat. We'll also add a page on our site shortly where you can upload a PDF and we'll confirm whether it really came from us.</p>
+        <p>You can download <a href="https://crt.sh/?id=8004113167">this public key file (.PEM)</a> and add it to Adobe Acrobat. You can also use <a href="#check-pdf">this form</a> to confirm whether it really came from us by checking its fingerprint against our logs.</p>
 
         <p>Tech nerd note: As an extra check, the key you're downloading here happens to be one that we also verified via LetsEncrypt as belonging to our domain. You can see the same key in <a href="https://crt.sh/?id=8004113167">the certificate transparency logs</a>.</p>
 
