Check PDF fix + copy edits

--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -179,6 +179,8 @@
         <p>archive.social is an experiment of the <a href="https://lil.law.harvard.edu">Harvard Library Innovation Lab</a>.</p>
 
         <p><a href="https://twitter.com/harvardlil">@harvardlil</a> on Twitter - <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&amp;id=e097736c6f">Subscribe to our Newsletter</a>.</p>
+
+        <p>contact: <a href="mailto:info@archive.social">info@archive.social</a></p>
       </footer>
 
     </main>
