--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -38,7 +38,7 @@
         </fieldset>
 
         <fieldset>
-          <label for="access-key">Archive.social access key</label>
+          <label for="access-key">Access key <a href="https://ocb.to/archive-social-form" title="Access key request form">(request access)</a></label>
           <input type="password" 
                  name="access-key" 
                  id="access-key"
@@ -97,7 +97,6 @@
       </dialog>
 
       <dialog id="check-pdf">
-
         <h2>Check a PDF</h2>
 
         <p>This tool verifies that a given .pdf file was created by archive.social by matching its fingerprint against our logs.</p>
@@ -112,8 +111,7 @@
 
         <button>Check PDF</button>
 
-        <a href="/">Close</a>
-
+        <a href="#">Close</a>
       </dialog>
 
       <!-- EXPLAINER -->
@@ -124,7 +122,7 @@
 
         <h2>Who can use it?</h2>
 
-        <p>To use our website <a href="https://docs.google.com/forms/d/11pVfBReAHmHGmtzKrQ4XqrvOMBr4BI4bX-hDdsn0OuQ/viewform">you'll need to contact us</a> for an API key. We're currently only able to share a limited number with people like journalists, internet scholars, and archivists. But you can also use <a href="https://github.com/harvard-lil/archive.social">our open source software</a> to stand up an archive server of your own, and share it with your friends.</p>
+        <p>To use our website <a href="https://ocb.to/archive-social-form">you'll need to contact us</a> for an API key. We're currently only able to share a limited number with people like journalists, internet scholars, and archivists. But you can also use <a href="https://github.com/harvard-lil/archive.social">our open source software</a> to stand up an archive server of your own, and share it with your friends.</p>
 
         <h2>Why make a PDF archiving tool for Twitter?</h2>
 
