"Save Your Threads!"

--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>archive.social | High-fidelity capture of Twitter threads as sealed PDFs.</title>
-    <meta name="description" content="archive.social is an experiment of the Harvard Library Innovation Lab.">
+    <title>Save Your Threads | High-fidelity capture of Twitter threads as sealed PDFs.</title>
+    <meta name="description" content="An experiment of the Harvard Library Innovation Lab.">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
         alt="Illustration of a person falling in an ocean of books.">
 
       <header>
-        <h1>archive.social</h1>
+        <h1>Save Your Threads</h1>
         <p>High-fidelity capture of Twitter threads as sealed PDFs.</p>
       </header>
 
@@ -118,7 +118,7 @@
       <section>
         <h2>What is this?</h2>
 
-        <p>Archive.social is an experiment by the <a href="https://lil.law.harvard.edu">Harvard Library Innovation Lab</a> to let you download signed PDFs of Twitter URLs. <a href="/static/example.pdf">Here's an example PDF</a> we made from <a href="https://twitter.com/doctorow/status/1591759999323492358">this tweet</a>.</p>
+        <p>This site is is an experiment by the <a href="https://lil.law.harvard.edu">Harvard Library Innovation Lab</a> to let you download signed PDFs of Twitter URLs. <a href="/static/example.pdf">Here's an example PDF</a> we made from <a href="https://twitter.com/doctorow/status/1591759999323492358">this tweet</a>.</p>
 
         <h2>Who can use it?</h2>
 
@@ -174,7 +174,7 @@
           </a>
         </p>
         
-        <p>archive.social is an experiment of the <a href="https://lil.law.harvard.edu">Harvard Library Innovation Lab</a>.</p>
+        <p>This site is an experiment of the <a href="https://lil.law.harvard.edu">Harvard Library Innovation Lab</a>.</p>
 
         <p><a href="https://twitter.com/harvardlil">@harvardlil</a> on Twitter - <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&amp;id=e097736c6f">Subscribe to our Newsletter</a>.</p>
 
