--- a/app/static/index.css
+++ b/app/static/index.css
@@ -57,8 +57,8 @@ body > main {
 }
 
 body > main h1 {
-  font-size: 2.85rem;
-  letter-spacing: -0.1rem;
+  font-size: 2.75rem;
+  /*letter-spacing: -0.1rem;*/
   text-align: center;
 }
 
