--- a/app/static/index.css
+++ b/app/static/index.css
@@ -57,14 +57,13 @@ body > main {
 }
 
 body > main h1 {
-  font-size: 2.75rem;
-  /*letter-spacing: -0.1rem;*/
+  font-size: 2.55rem;
   text-align: center;
 }
 
 @media (max-width: 769px) {
   body > main h1 {
-    font-size: 2.45rem;
+    font-size: 2.1rem;
   }
 }
 
@@ -272,7 +271,8 @@ body#index > main footer {
 
 body#index > main footer p {
   margin-bottom: 0.5rem;
-  /*font-size: 0.95rem;*/
+  font-size: 0.95rem;
+  line-height: 1.3rem;
 }
 
 @media (max-width: 769px) {
